[tool.poetry]
name = "selenium-lab"
version = "0.1.0"
description = ""
authors = ["superoverflow <cyrus.tang@superoverflow.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.4.3"
chromedriver-py = "^105.0.5195.52"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
